--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ html, body {
   height: 100%;
   overflow: hidden;
 }
+.container-main{
+  width: 100%;
+  max-width: 60em;
+  margin: 60px auto;
+}
 #zoom {
   width: 100%;
   height: 100%;
