--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html, body {
   width: 100%;
   max-width: 60em;
   margin: 60px auto;
+  box-sizing: border-box;
 }
 #zoom {
   width: 100%;
@@ -26,4 +27,10 @@ html, body {
 div#zoom > img {
   width: 100%;
   height: auto;
+}
+@media (max-width: 576px){
+  .container-main{
+    padding: 0 20px;
+
+  }
 }
